[0.2.3.0 - Beta    xx/Apr/2008]
+ added some more XML filter interfaces (mainly monogram filters)
+ added ALLOCATOR_PROPERTIES information for pin connection
+ added "Progress View" form
+ fixed a strange menu event problem
+ added volume & balance controls for filters exposing the IBasicAudio interface
+ MPEG1VIDEOINFO and MPEG2VIDEOINFO now displays sequence header data

[0.2.2.0 - Beta    24/Mar/2008]
+ added frame-step button
+ values in property pages can now be selected and put into clipboard
+ added key shortcuts (ESC = stop, Space = Play/Pause toggle, Right arrow = frame step)
+ GraphStudio now displays list of available media types for unconnected pins
+ GraphStudio can accept a filename to open via command line
+ added graph refresh feature (Ctrl+F5)
+ added AAC format parser

[0.2.1.0 - Beta	   15/Mar/2008]
+ more drawing fixes
+ added some more extensions into opendialog filters
+ added registered pin details and media types
+ added MPEG1VIDEOINFO and MPEG2VIDEOINFO structure details
+ property-tree integrated with the filters form
+ remote-graph bugfix (thanks to Christian Steindl)
+ Ctrl+G shortcut works also when connected to remote graph
+ added Render URL feature
+ added DirectConnect toggle
+ ActiveMovie Window now also contains filter name in the title

[0.2.0.0 - Beta    04/Mar/2008]
+ added filter details form
+ added pin details form
+ WAVEFORMATEX, VIDEOINFOHEADER, VIDEOINFOHEADER2 and BITMAPINFOHEADER are supported
+ property page drawing issues fixed
+ fixed bug with non-functional favorite filter links
+ better filter name detection

[0.1.9.0 - Alpha   24/Feb/2008]
+ added automatic graph restart schedule (currently only for 04:00 AM :) - don't ask why)
+ added capability to construct graphs from XML files
+ added extension filters for opening dialogs
+ added option to display filter name instead of filename of a source/sink filter
+ added link to filters form into the favorites form