@@ -15,6 +15,14 @@ namespace DSUtil
 	static const GUID CLSID_KSProxy = 
 	{ 0x17CCA71B, 0xECD7, 0x11D0, { 0xB9, 0x08, 0x00, 0xA0, 0xC9, 0x22, 0x31, 0x96 } };
 
+	// {C1F400A4-3F08-11D3-9F0B-006008039E37}
+	static const GUID CLSID_NullRenderer =
+	{ 0xC1F400A4, 0x3F08, 0x11D3, { 0x9F, 0x0B, 0x00, 0x60, 0x08, 0x03, 0x9E, 0x37 } };
+
+	// { 36a5f770-fe4c-11ce-a8ed-00aa002feab5 }
+	static const GUID CLSID_Dump =
+	{ 0x36a5f770, 0xfe4c, 0x11ce, { 0xa8, 0xed, 0x00, 0xaa, 0x00, 0x2f, 0xea, 0xb5 } };
+
 
 	//-------------------------------------------------------------------------
 	//
