@@ -5,6 +5,8 @@
 + fixed a strange menu event problem
 + added volume & balance controls for filters exposing the IBasicAudio interface
 + MPEG1VIDEOINFO and MPEG2VIDEOINFO now displays sequence header data
++ added internal dump filter
++ added shortcuts to Null Renderer & Dump into the rightclick menu
 
 [0.2.2.0 - Beta    24/Mar/2008]
 + added frame-step button
